Closed Bug 449171 Opened 17 years ago Closed 15 years ago

[FIX]"ASSERTION: media list must be nonempty"

Categories

(Core :: CSS Parsing and Computation, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: bzbarsky)

References

()

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file testcase
###!!! ASSERTION: media list must be nonempty: 'media->Count() != 0', file /Users/jruderman/central/layout/style/nsCSSParser.cpp, line 1838
This assertion should just be removed (and maybe also for @import). In the new media query world, |@media {}| is equivalent to |@media all {}|.
Attached patch Like soSplinter Review
Is the change in behavior for @media correct here, though? Neither Opera nor Safari seem to allow @media with no media, but they might not implement this part of media queries yet, I guess.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #335581 - Flags: superreview?(dbaron)
Attachment #335581 - Flags: review?(dbaron)
Summary: "ASSERTION: media list must be nonempty" → [FIX]"ASSERTION: media list must be nonempty"
Comment on attachment 335581 [details] [diff] [review] Like so r+sr=dbaron
Attachment #335581 - Flags: superreview?(dbaron)
Attachment #335581 - Flags: superreview+
Attachment #335581 - Flags: review?(dbaron)
Attachment #335581 - Flags: review+
Pushed changeset 47e1265cbf69.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
This reftest is failing for Fedora unit tests (see bug 560882). I have machines available to help fixing it. Let me know if it should make sense to file another bug instead of reopening this one.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Please file new bugs on new issues. This bug is fixed.
Status: REOPENED → RESOLVED
Closed: 16 years ago15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: