Bug 449171.  Fix bogus assertion.  r+sr=dbaron